<resources>
    <string name="app_name">cara2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid user name</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- permissions -->
    <string name="permissions_not_granted">This app needs camera permissions to run.</string>

    <!-- exit dialog -->
    <string name="exit_app_title">Confirm Exit</string>
    <string name="exit_app_msg">Do you want to exit this program?</string>
    <string name="exit_app_confirm">Exit</string>
    <string name="exit_app_cancel">Cancel</string>

    <!-- LoginFragment -->
    <string name="login_frag_title">Login</string>
    <string name="login_frag_unable_to_login">Unable to log in</string>
    <string name="login_frag_fill_in_forms">Please fill in the forms</string>

    <!-- CameraFragment -->
    <string name="camera_frag_title">Take Photo</string>

    <!-- PictureTakenFragment -->
    <string name="picture_taken_frag_title">Approve Photo</string>
    <string name="picture_taken_frag_send_button">Send</string>
    <string name="picture_taken_frag_hint">description</string>
    <string name="picture_taken_frag_image_desc">photo that was just taken</string>
    <!-- The prefix that precedes the actual message -->
    <string name="picture_taken_email_msg_prefix">caption for photo:\n</string>
    <!-- Prefix that immediately precedes the name of the sender -->
    <string name="picture_taken_email_name_prefix">from:\t</string>
    <string name="picture_taken_email_no_name">noname</string>
    <!-- String presented when the user does not supply a message -->
    <string name="picture_taken_email_no_msg">No message supplied</string>
    <string name="picture_taken_unable_to_send_email">Unable to send email!</string>
    <!-- unable to write file for the photograph (part of the sending process) -->
    <string name="picture_taken_unable_to_save_image">Unable to save photo—cannot send!</string>

    <!-- SendDataFragment -->
    <string name="send_data_frag_title">Send Photo</string>
    <string name="retake_picture">re-take</string>
    <string name="sending_picture_data">Sending image…</string>
    <string name="cancel_send_image">Cancel</string>
    <string name="successful_send">Image successfully sent, thank you!</string>

</resources>